add state parameter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,9 @@
       class='clef-button'
       src='https://clef.io/v3/clef.js'
       data-app-id='4f4baa300eae6a7532cc60d06b49e0b9'
-      data-redirect-url='http://localhost:4000/login'></script>
+      data-redirect-url='http://localhost:4000/login'
+      data-state='<%=state%>'
+      ></script>
     <%}%>
   </body>
 </html>
